Difficulty button text no longer wrapping for mobile view

--- a/styles/Home.css
+++ b/styles/Home.css
@@ -323,6 +323,7 @@
     left: 9px;
     height: 16px;
     width: 16px;
+    position: absolute;
   }
 
   .checkmark:after {
